--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -21,8 +21,8 @@ Demand side management programs are used to manage the electricity consumption o
 Demand side management can include energy conservation, energy efficiency and peak load management, and responses to 
 changing supply conditions (e.g., demand response). Some of these consumer actions are in response to notifications (day-ahead or day-of) from the energy providers. The focus for this paper is on programs that are targeted at load management to improve electric grid reliability. 
 Management of electricity supply are used to ensure the efficient and reliable generation, transmission and distribution of 
-electricity.  These methods 
-manage the supply of energy on the energy provider’s side to meet the changing demand conditions and any supply incontigencies. 
+electricity.  
+These methods by the energy provide are intended to address the changing demand conditions and any supply incontigencies. 
 
 There are many different ways that the end-users of electricity or consumers can modify or change their electricity use. 
 The following is a key list and 
