Removed a reference from prior work, its record entry is not available in Zotero. Made some other modifications.

--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -11,7 +11,7 @@ fluctuations of demand as facts of life. These fluctuations required
 additional generating capacity, particularly peaking plants that were needed
 only a few hours per year. 
 
-However, with increasing adoption of Smart Grid, information technology, communications, and a more dynamic and reslient grid, 
+However, with increasing adoption of Smart Grid, information technology, communications, and a more dynamic and resilient grid, 
 the value proposition of replacing the expensive and fossil-based peaking plants with more predictable demand with forecasting and demand response has the potential for new value proposition to the HPC data centers. 
 The increase in renewable generation and its intermittency offers opportunities for large and flexible loads that can adapt to changing electricity generation and sources.
 
@@ -20,22 +20,18 @@ Automation:
 %
 As the previous research as shown with data centers, HPC can also be considered as a resource to the grid and provide different services.
 To enable this, automation technologies, which can link the HPC data centers with the electric grid, 
-and on-site power management strategies for different timescales for grid services will play a key role in ease of adoption and lowering the participation costs.
+and on-site power management strategies for different time-scales for grid services will play a key role in ease of adoption and lowering the participation costs.
 
-Electriicty markets: 
-One of the key enabler for HPC data centers to participate in electriicty markets (e.g., demand response, electricity prices)
+Electricity markets: 
+One of the key enabler for HPC data centers to participate in electricity markets (e.g., demand response, electricity prices)
 is the markets that value their participation. 
 In other areas of commercial buildings and select industrial facilities, benefits to both electricity service providers and customers are well documented.
-However, as the electric grid and new dynamic loads such as HPCs evlove, the markets need mechanisms to identify and provide value of participation (e.g., cost, energy, carbon). 
+However, as the electric grid and new dynamic loads such as HPCs evolve, the markets need mechanisms to identify and provide value of participation (e.g., cost, energy, carbon). 
 (LIST SOME KEY FINDINGS FROM QUESTIONNAIRE)
 
 value proposition, (INCLUDED IN THE ELECTRICITY MARKETS ABOVE)
 
 the measurement and verification models, (LISTED BELOW)
-
-patents, (NOT SURE WHAT THIS IS AND WHY THIS IS RELEVANT)
-
-intellectual property (NOT SURE WHAT THIS IS AND WHY THIS IS RELEVANT)
 
 lighting, and heating, ventilation, and air conditioning (HVAC)
 It is clear from the HPC operation that the largest opportunity for load management exists in the IT equipment.
