--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -214,3 +214,8 @@ to be a complex optimization problem.  While this Section focuses on
 solving these problems to the end of developing a demand-response
 strategy in conjunction with supercomputer centers, these capabilities
 are likely applicable to a broad range of customers.
+
+%How about advance-reservation capability in schedulers? I (Mehdi) suggest to mention this capability as well, if you agree.
+%The same for grid computing.
+
+%How about multi-dimensional resource management and scheduling (multi-resource)? I have seen there are very good discussions about scheduling. We may take into account multi-resource scheduling. This means this scheduling takes into account not only CPU, but also other system resources like Memory, GPU, network input/network output, storage, etc. Even software/application can be a resource.
