--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -65,9 +65,7 @@ from low system utilization. The most commonly used optimization is backfilling
 utilization. By identifying free capacities backfillin allows smaller
 jobs that fit those capacities to move forward and run on idle processors.
 
-In [Yang ref is not in Zotero] 
-\cite{zhou_reducing_2013}
-[Yang13] and [Zhou13] , \textbf{job scheduling} as a DR strategy and
+In \cite{zhou_reducing_2013} [Zhou13] , \textbf{job scheduling} as a DR strategy and
 \textbf{dynamic pricing} as a grid integration program have been used to
 propose \textbf{a power-aware job scheduling} approach to reduce
 \textbf{electricity costs} \textit{without degrading system utilization}. 
@@ -143,13 +141,12 @@ job-placement-centric. These techniques either aim to place incoming
 computationally intensive jobs in a thermal-aware manner on servers with
 lower temperatures or attempt to reactively migrate/load-balance jobs from
 high temperature servers to servers with lower temperatures.
-\textbf{\textit{T* }} 
 
 \cite{kaushik_t*:_2012}
 [Kau12]
  takes a data-centric thermal- and
 energy-management approach and does proactive, thermal-aware file placement
-which allows cooling energy costs savings without performance trade-offs. T*
+which allows cooling energy costs savings without performance trade-offs. \textbf{\textit{T* }} 
 is cognizant of the uneven thermal-profile of the servers, differences in
 their thermal-reliability-driven load thresholds, and differences in the
 data-semantics, i.e., computation job rates, sizes, and evolution life
