--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -110,4 +110,4 @@ applies when there is redundancy.
 humidity levels for short periods.
 \end{itemize}
 
-It should be noted that these strategies are intended to temorarily reduce HPC service levels witout impacting the facility operations or the equipment.
+It should be noted that these strategies are intended to temporarily reduce HPC service levels without impacting the facility operations or the equipment.
