Added a reference to dynamic pricing and scheduling.

--- a/bib/whitepaper.bib
+++ b/bib/whitepaper.bib
@@ -1,4 +1,19 @@
-
+@inproceedings{yang_integrating_2013,
+	address = {New York, {NY}, {USA}},
+	series = {{SC} '13},
+	title = {Integrating Dynamic Pricing of Electricity into Energy Aware Scheduling for {HPC} Systems},
+	isbn = {978-1-4503-2378-9},
+	url = {http://doi.acm.org/10.1145/2503210.2503264},
+	doi = {10.1145/2503210.2503264},
+	abstract = {The research literature to date mainly aimed at reducing energy consumption in {HPC} environments. In this paper we propose a job power aware scheduling mechanism to reduce {HPC's} electricity bill without degrading the system utilization. The novelty of our job scheduling mechanism is its ability to take the variation of electricity price into consideration as a means to make better decisions of the timing of scheduling jobs with diverse power profiles. We verified the effectiveness of our design by conducting trace-based experiments on an {IBM} Blue {Gene/P} and a cluster system as well as a case study on Argonne's 48-rack {IBM} Blue {Gene/Q} system. Our preliminary results show that our power aware algorithm can reduce electricity bill of {HPC} systems as much as 23\%.},
+	urldate = {2014-02-14},
+	booktitle = {Proceedings of {SC13:} International Conference for High Performance Computing, Networking, Storage and Analysis},
+	publisher = {{ACM}},
+	author = {Yang, Xu and Zhou, Zhou and Wallace, Sean and Lan, Zhiling and Tang, Wei and Coghlan, Susan and Papka, Michael E.},
+	year = {2013},
+	keywords = {electricity bill, job scheduling, power, system utilization},
+	pages = {60:1–60:11}
+}
 
 @inproceedings{bertran_accurate_2010,
 	title = {Accurate energy accounting for shared virtualized environments using {PMC-based} power modeling techniques},
@@ -446,7 +461,7 @@ control schemes, and market-based rules of operation.},
 	issn = {0957-1787},
 	url = {http://www.sciencedirect.com/science/article/pii/S0957178707000732},
 	doi = {10.1016/j.jup.2007.11.006},
-	abstract = {It is generally accepted that the integration of intermittent energy resources like wind energy and photovoltaics into an electricity system cannot exceed a limit of around 20\% or 25\%, see, e.g. [{EWEA}, 2005. Large-scale integration of wind energy in the European power supply: analysis, issues and recommendations. The European Wind Energy Association]. However, the decoupling of electricity generation and consumption cannot be implemented only by use of electricity storage. In the end, electricity is converted into many different energy services – quite often into thermal energy – which is better suited for storage. This article presents the results of investigations which studied the potential of those demand response activities for Germany. The investigations are based on both modelling of thermal storage devices and laboratory tests.},
+	abstract = {It is generally accepted that the integration of intermittent energy resources like wind energy and photovoltaics into an electricity system cannot exceed a limit of around 20\% or 25\%, see, e.g. [{EWEA}, 2005. Large-scale integration of wind energy in the European power supply: analysis, issues and recommendations. The European Wind Energy Association]. However, the decoupling of electricity generation and consumption cannot be implemented only by use of electricity storage. In the end, electricity is converted into many different energy services – quite often into thermal energy – which is better suited for storage. This article presents the results of investigations which studied the potential of those demand response activities for Germany. The investigations are based on both modelling of thermal storage devices and laboratory tests.},
 	number = {2},
 	urldate = {2013-10-23},
 	journal = {Utilities Policy},
@@ -908,7 +923,7 @@ The bus-level control improves power and voltage ramping rates, reduces wind pow
 	volume = {3},
 	isbn = {978-0-387-78934-7},
 	url = {http://www.springer.com/mathematics/applications/book/978-0-387-78934-7},
-	abstract = {This book on scheduling covers theoretical models as well as scheduling problems in the real world.  The book consists of three parts. The first part focuses on deterministic scheduling with the associated combinatorial problems. ...},
+	abstract = {This book on scheduling covers theoretical models as well as scheduling problems in the real world.  The book consists of three parts. The first part focuses on deterministic scheduling with the associated combinatorial problems. ...},
 	urldate = {2013-08-03},
 	publisher = {Springer},
 	author = {Pinedo, Michael L.},
