--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -65,7 +65,7 @@ from low system utilization. The most commonly used optimization is backfilling
 utilization. By identifying free capacities backfillin allows smaller
 jobs that fit those capacities to move forward and run on idle processors.
 
-In \cite{zhou_reducing_2013} [Zhou13] , \textbf{job scheduling} as a DR strategy and
+In \cite{yang_integrating_2013} \cite{zhou_reducing_2013}, \textbf{job scheduling} as a DR strategy and
 \textbf{dynamic pricing} as a grid integration program have been used to
 propose \textbf{a power-aware job scheduling} approach to reduce
 \textbf{electricity costs} \textit{without degrading system utilization}. 
