--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -230,7 +230,7 @@ respondents, but only interesting to 10\% .
 \textbf{Impact} \\
 \hline
 
-Course grained power management &
+Coarse grained power management &
 64 &
 46 &
 27 \\
