--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -166,10 +166,9 @@ In
 \cite{aikema_electrical_2011}
 [Aik11] , authors explored the potential for HPC centers to adapt to
 dynamic electrical prices, variation in carbon intensity within an
-electrical grid, or availability of local renewables. Through simulations
-experiments on workloads from the Parallel Workloads Archive alongside
+electrical grid, or availability of local renewables. Through simulations on workloads from the Parallel Workloads Archive alongside
 real-world pricing data, they demonstrate potential savings on the cost of
-electricity ranging typically between 10-50{\%}. Nonetheless, adaptation to
+electricity ranging typically between 10{\%} and 50{\%}. Nonetheless, adaptation to
 the variation in the electrical grid carbon intensity was not as successful,
 but adaptation to the availability of local renewables showed potential to
 significantly increase their use.
