--- a/text/supercomputercenters.tex
+++ b/text/supercomputercenters.tex
@@ -70,7 +70,8 @@ of regulation and reserves that relies heavily on a day-ahead market program. Th
 for demand side resources- like supercomputer centers with renewable energy sources- to participate in the 
 market supplying the ISO-NE with electricity.  It also makes the NE-ISO particularly sensitive to major 
 fluctuations in electricity demand, which, as discussed further in the questionnaire section, is an emerging 
-characteristic of the largest supercomputer centers.
+characteristic of the largest supercomputer centers.  
+\footnote {http://drrc.lbl.gov/sites/drrc.lbl.gov/files/LBNL-5958E.pdf}
 
 \subsection{Supercomputer Center Response Strategies}
 
