Fix a syntax error in the questionnaire.tex file which was breaking the build of the document.

--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -194,9 +194,9 @@ It was suggested by ORNL that some of the power management strategies
 are of questionable business value even for energy efficiency, let alone grid integration.
 For example, ORNL comments that "these assets have very clear depreciation schedules, and the modest cost 
 savings in terms of electricity consumption due to some of these methods may not (or frequently will not) 
-outweigh the capital investment cost in the computer.  I.e. If <site> spent $100M for a computer that will 
+outweigh the capital investment cost in the computer.  I.e. If a site spent \$100M for a computer that will 
 remain in production for 60 months, then the 
-apparent benefit of power capping, etc can easily be outweighed by lost productivity of the consumable resource."
+apparent benefit of power capping, etc can easily be outweighed by lost productivity of the consumable resource.
 
 Similarly, another comment by ORNL suggested that the rapid deployment of hardware features, like P-states,  
  may outpace the need for strategies like power aware job scheduling.
