--- a/text/whitepaper.tex
+++ b/text/whitepaper.tex
@@ -43,29 +43,14 @@ address2, Country}
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-Some of the largest supercomputer centers in the United 
-States are developing new relationships with their 
-electricity providers.  These relationships, similar to other commercial 
-and industrial facilities, are driven by mutual interest— to save energy 
-costs and improve electricity grid reliability.  Supercomputer centers are concerned about 
-electricity price, quality, environmental impact and 
-availability. Electricity providers are concerned about 
-supercomputer center's impact on the electrical grid reliability, both 
-for energy consumption, peak power and fluctuations in 
-power. Supercomputer center power demand can be greater 
-than 20 megawatts (MW) or more, theoretical peak power requirements 
-greater than 45MW and re-occurring intra-hour variability 
-can exceed 8MW. As a consequence, there are some 
-supercomputer centers whose electricity providers are 
-asking for hourly forecasts of power demand, a day in 
-advance.   This paper explores today's relationships, 
-potential partnerships and possible integration between 
-supercomputer centers and their electricity providers and its value. It 
-develops a model for possible integration between 
-supercomputer centers and the electrical grid. It then 
-explores the utility of this model based on feedback from a 
-questionnaire of Top 100 List sized supercomputer centers 
-in the United States.
+Some of the largest supercomputer centers in the United States are developing new relationships with their electricity service providers. 
+These relationships, similar to other commercial and industrial facilities, are driven by mutual interest to save energy costs and improve electricity grid reliability.
+Supercomputer centers are concerned about electricity price, quality, environmental impact and availability.
+Electricity service providers are concerned about supercomputer center’s impact on the electrical grid reliability; for energy consumption, peak power and fluctuations in power.
+Supercomputer center power demand can be greater than 20 megawatts (MW) or more - the theoretical peak power requirements are greater than 45MW - and re-occurring intra-hour variability can exceed 8MW.
+As a consequence, there are some supercomputer centers whose electricity service providers are asking for hourly forecasts of power demand, a day in advance.
+This paper explores today’s relationships, potential partnerships and possible integration be- tween supercomputer centers and their electricity service providers, and its value.
+It evinces the challenges for this possible HPC-Grid integration, and then cites opportunities to overcome the barriers using feedback from a questionnaire of Top 100 List sized supercomputer centers in the United States.
 \end{abstract}
 
 %
